--- a/style.css
+++ b/style.css
@@ -13,6 +13,11 @@ body {
 
 p {
   color: white;
+  font-family: "New Amsterdam", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 1.2rem;
+ 
 }
 
 .outer-container {
@@ -41,6 +46,7 @@ p {
   justify-content: center;
   align-items: center;
   color: white;
+  font-size: 2rem;
 }
 
 .img-container {
@@ -58,8 +64,55 @@ p {
   width: 150px;
   height: 150px;
   border-radius: 50%;
-  border: 1px solid black;
+  /* border: 1px solid black; */
 }
+
+#captain-img{
+  transition: transform 0.5s ease;
+}
+
+.move-right {
+  animation: moveRight 0.5s forwards;
+  border:2px solid red;  
+}
+
+@keyframes moveRight {
+  0% {
+      transform: translateX(0);
+  }
+  50% {
+      transform: translateX(20px); /* Move right by 20px */
+  }
+  100% {
+      transform: translateX(0);
+  }
+}
+
+
+/* Move alien  image left  */
+#alien-img {
+  width: 200px; /* Adjust size as needed */
+  transition: transform 0.5s ease;
+}
+
+.move-left {
+  animation: moveLeft 0.5s forwards;
+  border:2px solid red; 
+}
+
+@keyframes moveLeft {
+  0% {
+      transform: translateX(0);
+  }
+  50% {
+      transform: translateX(-20px); /* Move left by 20px */
+  }
+  100% {
+      transform: translateX(0);
+  }
+}
+
+
 
 .fire-container {
   height: 10%;
@@ -75,7 +128,7 @@ p {
     display: flex;
 align-items: center;
 justify-content: center;
-  border: 1px solid rgb(235, 24, 24);
+  border: 1px solid white;
  
   cursor: pointer;
 }
@@ -129,6 +182,19 @@ justify-content: center;
     cursor: pointer;
 }
 
-.retreat{
+
+.dnone{
     display: none;
 }
+
+.btn-styles{
+font-family: "New Amsterdam", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  color: brown;
+  font-size: 1.4rem;
+}
+
+/* .big-sz{
+  font-size: 2rem;
+} */
