--- a/style.css
+++ b/style.css
@@ -21,26 +21,26 @@ p {
 }
 
 .outer-container {
-  border: 1px solid black;
+  /* border: 1px solid black; */
   margin: auto;
   height: 100vh;
   width: 70vw;
 }
 
 .top-container {
-  border: 1px solid green;
+  /* border: 1px solid green; */
   height: 80%;
   display: flex;
 }
 
 .left-container {
-  border: 1px solid rgb(22, 193, 96);
+  /* border: 1px solid rgb(22, 193, 96); */
   width: 50%;
   height: 100%;
 }
 
 .type {
-  border: 1px solid black;
+  /* border: 1px solid black; */
   height: 10%;
   display: flex;
   justify-content: center;
@@ -50,7 +50,7 @@ p {
 }
 
 .img-container {
-  border: 1px solid black;
+  /* border: 1px solid black; */
   height: 70%;
   display: flex;
   justify-content: center;
@@ -156,13 +156,13 @@ justify-content: center;
 }
 
 .right-container {
-  border: 1px solid blue;
+  /* border: 1px solid blue; */
   width: 50%;
   height: 100%;
 }
 
 .bottom-container {
-  border: 1px solid red;
+  /* border: 1px solid red; */
   height: 20%;
 display: flex;
 align-items: center;
